<resources>
    <string name="app_name">AppForAcademy</string>
    <string name="back">&#60; Back</string>
    <string name="canAge">13+</string>
    <string name="nameMovies">Avengers: End Game</string>
    <string name="downTitle">Action, Adventure, Fantasy</string>
    <string name="countFeedback">125 Reviews</string>
    <string name="storyline">Storyline</string>
    <string name="storylineText">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="person1">Robert Downey Jr.</string>
    <string name="person2">Chris Evans</string>
    <string name="person3">Mark Ruffalo</string>
    <string name="person4">Chris Hemsworth</string>
    <string name="moviestList">Movies list</string>
    <string name="movie_long_time">137 min</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- FragmentActors -->
    <string name="fragment_actors_header">Actors</string>
    <string name="fragment_actors_empty_text">There are no actors right now</string>
    <string name="fragment_actors_avatar_content_description">Actor avatar</string>
    <string name="fragment_actors_avatar_oscar_state_text">oscar: %1$s</string>
    <!-- FragmentActors -->

    <string name="fragment_actors_chosen_text">You chose: %1$s</string>

    <string name="email_recipient_to">To %1$s</string>
    <string name="email_card_transition_name">email_card_%1$s</string>
    <string name="email_card_detail_transition_name">email_card_detail</string>

    <!--    Animation-->
    <string name="movie_recipient_to">To %1$s</string>
    <string name="movie_card_transition_name">movie_card_%1$s</string>
    <string name="movie_card_detail_transition_name">movie_card_detail</string>
</resources>