<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backAll">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConsraintLayoutMain1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backAll"
            tools:context=".MovieDetailsActivity">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/orig" />

            <TextView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="57dp"
                android:text="@string/back"

                android:textColor="@color/countFeedback"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/canAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="226dp"
                android:text="@string/canAge"
                android:textColor="@color/age"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nameMovie"
                android:layout_width="216dp"
                android:layout_height="86dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/nameMovies"
                android:textAllCaps="false"
                android:textColor="@color/age"
                android:textSize="36sp"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/canAge" />

            <TextView
                android:id="@+id/typeMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/downTitle"
                android:textColor="@color/downTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameMovie" />

            <TextView
                android:id="@+id/countFeadBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="103dp"
                android:text="@string/countFeedback"
                android:textColor="@color/countFeedback"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/typeMovie" />

            <ImageView
                android:id="@+id/appraisal5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="9dp"
                app:layout_constraintEnd_toStartOf="@+id/countFeadBack"
                app:layout_constraintTop_toBottomOf="@+id/typeMovie"
                app:srcCompat="@drawable/staricon" />

            <ImageView
                android:id="@+id/appraisal4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintEnd_toStartOf="@+id/countFeadBack"
                app:layout_constraintTop_toBottomOf="@+id/typeMovie"
                app:srcCompat="@drawable/staricon1"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/appraisal3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="41dp"
                app:layout_constraintEnd_toStartOf="@+id/countFeadBack"
                app:layout_constraintTop_toBottomOf="@+id/typeMovie"
                app:srcCompat="@drawable/staricon1"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/appraisal2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="58dp"

                app:layout_constraintEnd_toStartOf="@+id/countFeadBack"
                app:layout_constraintTop_toBottomOf="@+id/typeMovie"
                app:srcCompat="@drawable/staricon1"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/appraisal1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="74dp"
                app:layout_constraintEnd_toStartOf="@+id/countFeadBack"
                app:layout_constraintTop_toBottomOf="@+id/typeMovie"
                app:srcCompat="@drawable/staricon1"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/Storyline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/storyline"
                android:textColor="@color/storyline"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/countFeadBack" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"

                android:fontFamily="sans-serif-condensed"
                android:text="@string/storylineText"
                android:textColor="@color/storylineText"
                android:typeface="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Storyline" />

            <TextView
                android:id="@+id/cast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/cast"
                android:textColor="@color/storyline"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <ImageView
                android:id="@+id/actor1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/actor2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cast"
                app:srcCompat="@drawable/movie" />

            <ImageView
                android:id="@+id/actor2"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/actor3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/actor1"
                app:layout_constraintTop_toBottomOf="@+id/cast"
                app:srcCompat="@drawable/movie1" />

            <ImageView
                android:id="@+id/actor3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/actor4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/actor2"
                app:layout_constraintTop_toBottomOf="@+id/cast"
                app:srcCompat="@drawable/movie2" />

            <ImageView
                android:id="@+id/actor4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/actor3"
                app:layout_constraintTop_toBottomOf="@+id/cast"
                app:srcCompat="@drawable/movie3" />

            <TextView
                android:id="@+id/actor1text"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"

                android:layout_marginTop="6dp"
                android:text="@string/person1"
                android:textColor="@color/belowActors"
                app:layout_constraintEnd_toEndOf="@+id/actor1"
                app:layout_constraintEnd_toStartOf="@+id/actor2text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/actor1" />

            <TextView
                android:id="@+id/actor2text"
                android:layout_width="80dp"
                android:layout_height="40dp"

                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:text="@string/person2"
                android:textColor="@color/belowActors"
                app:layout_constraintEnd_toStartOf="@+id/actor3text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/actor1text"
                app:layout_constraintTop_toBottomOf="@+id/actor2" />

            <TextView
                android:id="@+id/actor3text"
                android:layout_width="80dp"
                android:layout_height="40dp"

                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:text="@string/person3"
                android:textColor="@color/belowActors"
                app:layout_constraintEnd_toStartOf="@+id/actor4text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/actor2text"
                app:layout_constraintTop_toBottomOf="@+id/actor3" />

            <TextView
                android:id="@+id/actor4text"
                android:layout_width="80dp"
                android:layout_height="40dp"

                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="10dp"
                android:text="@string/person4"
                android:textColor="@color/belowActors"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/actor3text"
                app:layout_constraintTop_toBottomOf="@+id/actor4" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>