<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".fragment_movies_details">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConsraintLayoutMain1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backAll"
            >


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/orig" />

            <TextView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/usually"
                android:layout_marginTop="@dimen/top_58"
                android:text="@string/back"

                android:textColor="@color/countFeedback"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/canAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/usually"
                android:layout_marginTop="226dp"
                android:text="@string/canAge"
                android:textColor="@color/age"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nameMovie"
                android:layout_width="216dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/usually"
                android:layout_marginTop="@dimen/usually12"
                android:text="@string/nameMovies"
                android:textAllCaps="false"
                android:textColor="@color/storyline"
                android:textSize="36sp"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/canAge" />

            <TextView
                android:id="@+id/tv_typeMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/usually"
                android:layout_marginTop="@dimen/usually4"
                android:text="@string/downTitle"
                android:textColor="@color/downTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameMovie" />

            <TextView
                android:id="@+id/countFeadBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="103dp"
                android:text="@string/countFeedback"
                android:textColor="@color/countFeedback"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_typeMovie" />

            <ImageView
                android:id="@+id/appraisal5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/usually4"
                android:layout_marginEnd="@dimen/usually8"
                app:layout_constraintEnd_toStartOf="@+id/countFeadBack"
                app:layout_constraintTop_toBottomOf="@+id/tv_typeMovie"
                app:srcCompat="@drawable/staricon" />

            <ImageView
                android:id="@+id/appraisal4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/usually4"
                android:layout_marginEnd="25dp"
                app:layout_constraintEnd_toStartOf="@+id/countFeadBack"
                app:layout_constraintTop_toBottomOf="@+id/tv_typeMovie"
                app:srcCompat="@drawable/staricon1"
                />

            <ImageView
                android:id="@+id/appraisal3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/usually4"
                android:layout_marginEnd="41dp"
                app:layout_constraintEnd_toStartOf="@+id/countFeadBack"
                app:layout_constraintTop_toBottomOf="@+id/tv_typeMovie"
                app:srcCompat="@drawable/staricon1"
                />

            <ImageView
                android:id="@+id/appraisal2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/usually4"
                android:layout_marginEnd="58dp"

                app:layout_constraintEnd_toStartOf="@+id/countFeadBack"
                app:layout_constraintTop_toBottomOf="@+id/tv_typeMovie"
                app:srcCompat="@drawable/staricon1"
                />

            <ImageView
                android:id="@+id/appraisal1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/usually4"
                android:layout_marginEnd="74dp"
                app:layout_constraintEnd_toStartOf="@+id/countFeadBack"
                app:layout_constraintTop_toBottomOf="@+id/tv_typeMovie"
                app:srcCompat="@drawable/staricon1"
                />

            <TextView
                android:id="@+id/Storyline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/usually"
                android:layout_marginTop="24dp"
                android:text="@string/storyline"
                android:textColor="@color/storyline"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/countFeadBack" />

            <TextView
                android:id="@+id/Storylinetext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/usually"
                android:layout_marginTop="@dimen/usually4"
                android:layout_marginEnd="@dimen/usually"

                android:fontFamily="sans-serif-condensed"
                android:text="@string/storylineText"
                android:textColor="@color/storylineText"
                android:typeface="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Storyline" />

            <TextView
                android:id="@+id/cast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/usually"
                android:layout_marginTop="24dp"
                android:text="@string/cast"
                android:textColor="@color/storyline"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Storylinetext" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_actors"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/usually"
                android:layout_marginEnd="@dimen/usually"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/cast"
                app:spanCount="4"
                tools:orientation="horizontal" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</FrameLayout>