<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:elevation="0dp"
    android:focusable="true"


    android:transitionName="card">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/ic_backraund_movies_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_movies_list" />

        <ImageView
            android:id="@+id/ic_afisha_movies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_marginStart="2dp"
            android:background="@drawable/background_movie"
            app:layout_constraintEnd_toEndOf="@+id/ic_backraund_movies_one"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/ic_backraund_movies_one"
            app:layout_constraintTop_toTopOf="@+id/ic_backraund_movies_one" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/gradient"
            app:layout_constraintBottom_toBottomOf="@id/ic_afisha_movies"
            app:layout_constraintEnd_toEndOf="@+id/ic_afisha_movies"
            app:layout_constraintStart_toStartOf="@+id/ic_afisha_movies"
            app:layout_constraintTop_toTopOf="@id/ic_afisha_movies" />

        <TextView
            android:id="@+id/tv_typeMovie"
            android:layout_width="156dp"
            android:layout_height="18dp"
            android:text="@string/downTitle"
            android:textColor="@color/downTitle"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/ic_afisha_movies"
            app:layout_constraintEnd_toEndOf="@+id/ic_backraund_movies_one"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            tools:layout_editor_absoluteX="9dp"
            tools:layout_editor_absoluteY="179dp" />

        <RatingBar
            android:id="@+id/ratingBarOnHolderMovie"
            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:numStars="5"
            android:progressBackgroundTint="@color/downTitle"
            android:progressTint="@color/downTitle"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toTopOf="@+id/tv_countFeadBack_list" />

        <TextView
            android:id="@+id/tv_countFeadBack_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:text="@string/countFeedback"
            android:textColor="@color/countFeedback"
            android:textSize="8sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ratingBarOnHolderMovie"
            app:layout_constraintTop_toBottomOf="@+id/tv_typeMovie" />

        <TextView
            android:id="@+id/tv_name_movies"
            android:layout_width="157dp"
            android:layout_height="19dp"
            android:text="@string/nameMovies"
            android:textColor="@color/storyline"
            app:layout_constraintBottom_toTopOf="@+id/tv_typeMovie"
            app:layout_constraintEnd_toEndOf="@+id/ic_backraund_movies_one"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="10dp"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_movie_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/movie_long_time"
            android:textColor="@color/countFeedback"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/ic_backraund_movies_one"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/tv_countFeadBack_list" />

        <ImageView
            android:id="@+id/ic_can_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/usually8"
            android:src="@drawable/rectangle"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toTopOf="@+id/ic_backraund_movies_one" />

        <TextView
            android:id="@+id/tv_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/canAge"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/ic_can_age"
            app:layout_constraintEnd_toEndOf="@+id/ic_can_age"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toTopOf="@+id/ic_can_age" />

        <ImageView
            android:id="@+id/ic_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:src="@drawable/like"
            app:layout_constraintEnd_toEndOf="@+id/ic_backraund_movies_one"
            app:layout_constraintTop_toTopOf="@+id/tv_age" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/gr_movie_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="ic_like,tv_name_movies,ic_afisha_movies,tv_movie_time,tv_typeMovie,tv_countFeadBack_list,guidelineLeft,ic_backraund_movies_one,ic_can_age,tv_age"
            app:layout_constraintBottom_toBottomOf="@+id/ic_backraund_movies_one"
            app:layout_constraintEnd_toEndOf="@+id/ic_backraund_movies_one"
            app:layout_constraintStart_toStartOf="@+id/ic_backraund_movies_one"
            app:layout_constraintTop_toTopOf="@+id/ic_backraund_movies_one" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>